--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
-	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "none",
-	"printWidth": 100,
+	"semi": false,
+	"printWidth": 80,
+	"singleAttributePerLine": true,
+	"useTabs": false,
+
 	"plugins": ["prettier-plugin-svelte"],
 	"overrides": [
 		{
