--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
     "lint": "prettier --check ."
   },
   "devDependencies": {
-    "@shikijs/rehype": "^3.7.0",
-    "@shikijs/transformers": "^3.7.0",
-    "@sveltejs/adapter-auto": "^6.0.1",
-    "@sveltejs/kit": "^2.22.2",
-    "@sveltejs/vite-plugin-svelte": "^5.1.0",
+    "@shikijs/rehype": "^3.12.2",
+    "@shikijs/transformers": "^3.12.2",
+    "@sveltejs/adapter-auto": "^6.1.0",
+    "@sveltejs/kit": "^2.42.1",
+    "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "rehype-stringify": "^10.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
-    "svelte": "^5.35.2",
-    "svelte-check": "^4.2.2",
-    "typescript": "^5.8.3",
+    "svelte": "^5.38.10",
+    "svelte-check": "^4.3.1",
+    "typescript": "^5.9.2",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
-    "vite": "^6.3.5",
-    "vite-plugin-devtools-json": "^0.2.1",
-    "remark-gfm": "^4.0.1"
+    "vite": "^7.1.5",
+    "vite-plugin-devtools-json": "^1.0.0"
   }
 }
